# PPData

./: .gitignore  CMakeLists.txt  README.md
src/: Container.cpp  Container.h  FastaData.h  Hash.h  PPData.cpp  PPData.h  PeptData.h  PeptGenerator.h  PeptMgr.h  ProtData.h
test/: Test_PPData.cpp  Test_PeptMgr.cpp
